--- a/6.6.5 Keras for a Neural Net.ipynb
+++ b/6.6.5 Keras for a Neural Net.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -39,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -61,16 +63,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
+      "11247616/11490434 [============================>.] - ETA: 0s"
+     ]
+    }
+   ],
    "source": [
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +137,7 @@
        "        [0, 0, 0, ..., 0, 0, 0]]], dtype=uint8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,9 +238,9 @@
       "_________________________________________________________________\n",
       "dense_3 (Dense)              (None, 10)                650       \n",
       "=================================================================\n",
-      "Total params: 55,050.0\n",
-      "Trainable params: 55,050.0\n",
-      "Non-trainable params: 0.0\n",
+      "Total params: 55,050\n",
+      "Trainable params: 55,050\n",
+      "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -268,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -277,27 +288,27 @@
      "text": [
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 2s - loss: 0.4271 - acc: 0.8752 - val_loss: 0.1957 - val_acc: 0.9402\n",
+      "60000/60000 [==============================] - 1s - loss: 0.4379 - acc: 0.8721 - val_loss: 0.1884 - val_acc: 0.9428\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.2072 - acc: 0.9386 - val_loss: 0.1366 - val_acc: 0.9581\n",
+      "60000/60000 [==============================] - 1s - loss: 0.2045 - acc: 0.9391 - val_loss: 0.1405 - val_acc: 0.9569\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1571 - acc: 0.9516 - val_loss: 0.1157 - val_acc: 0.9646\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1607 - acc: 0.9520 - val_loss: 0.1147 - val_acc: 0.9643\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1301 - acc: 0.9605 - val_loss: 0.1001 - val_acc: 0.9702\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1355 - acc: 0.9589 - val_loss: 0.1077 - val_acc: 0.9693\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1126 - acc: 0.9655 - val_loss: 0.0992 - val_acc: 0.9716\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1203 - acc: 0.9634 - val_loss: 0.1047 - val_acc: 0.9693\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1040 - acc: 0.9690 - val_loss: 0.0861 - val_acc: 0.9746\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1071 - acc: 0.9677 - val_loss: 0.0987 - val_acc: 0.9715\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0933 - acc: 0.9712 - val_loss: 0.0875 - val_acc: 0.9745\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0988 - acc: 0.9704 - val_loss: 0.0956 - val_acc: 0.9735\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0876 - acc: 0.9733 - val_loss: 0.0892 - val_acc: 0.9745\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0900 - acc: 0.9723 - val_loss: 0.0963 - val_acc: 0.9730\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0832 - acc: 0.9744 - val_loss: 0.0818 - val_acc: 0.9764\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0848 - acc: 0.9740 - val_loss: 0.0894 - val_acc: 0.9763\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0765 - acc: 0.9770 - val_loss: 0.0792 - val_acc: 0.9776\n",
-      "Test loss: 0.0791663453906\n",
-      "Test accuracy: 0.9776\n"
+      "60000/60000 [==============================] - 1s - loss: 0.0811 - acc: 0.9749 - val_loss: 0.0784 - val_acc: 0.9792\n",
+      "Test loss: 0.0783890736205\n",
+      "Test accuracy: 0.9792\n"
      ]
     }
    ],
@@ -347,27 +358,27 @@
       "10000 test samples\n",
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 136s - loss: 0.3385 - acc: 0.8975 - val_loss: 0.0842 - val_acc: 0.9735\n",
+      "60000/60000 [==============================] - 123s - loss: 0.3270 - acc: 0.9011 - val_loss: 0.0720 - val_acc: 0.9782\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 136s - loss: 0.1178 - acc: 0.9649 - val_loss: 0.0551 - val_acc: 0.9828\n",
+      "60000/60000 [==============================] - 124s - loss: 0.1113 - acc: 0.9677 - val_loss: 0.0517 - val_acc: 0.9831\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 130s - loss: 0.0891 - acc: 0.9736 - val_loss: 0.0483 - val_acc: 0.9845\n",
+      "60000/60000 [==============================] - 124s - loss: 0.0880 - acc: 0.9738 - val_loss: 0.0468 - val_acc: 0.9846\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 144s - loss: 0.0746 - acc: 0.9784 - val_loss: 0.0394 - val_acc: 0.9866\n",
+      "60000/60000 [==============================] - 121s - loss: 0.0715 - acc: 0.9791 - val_loss: 0.0393 - val_acc: 0.9863\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 137s - loss: 0.0639 - acc: 0.9803 - val_loss: 0.0369 - val_acc: 0.9879\n",
+      "60000/60000 [==============================] - 120s - loss: 0.0632 - acc: 0.9815 - val_loss: 0.0350 - val_acc: 0.9874\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 138s - loss: 0.0577 - acc: 0.9825 - val_loss: 0.0336 - val_acc: 0.9879\n",
+      "60000/60000 [==============================] - 124s - loss: 0.0569 - acc: 0.9827 - val_loss: 0.0334 - val_acc: 0.9884\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 145s - loss: 0.0530 - acc: 0.9837 - val_loss: 0.0361 - val_acc: 0.9870\n",
+      "60000/60000 [==============================] - 127s - loss: 0.0516 - acc: 0.9840 - val_loss: 0.0306 - val_acc: 0.9890\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 137s - loss: 0.0477 - acc: 0.9858 - val_loss: 0.0308 - val_acc: 0.9895\n",
+      "60000/60000 [==============================] - 122s - loss: 0.0471 - acc: 0.9861 - val_loss: 0.0318 - val_acc: 0.9894\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 139s - loss: 0.0438 - acc: 0.9869 - val_loss: 0.0300 - val_acc: 0.9896\n",
+      "60000/60000 [==============================] - 117s - loss: 0.0428 - acc: 0.9864 - val_loss: 0.0311 - val_acc: 0.9894\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 141s - loss: 0.0437 - acc: 0.9868 - val_loss: 0.0294 - val_acc: 0.9902\n",
-      "Test loss: 0.0294480922608\n",
-      "Test accuracy: 0.9902\n"
+      "60000/60000 [==============================] - 133s - loss: 0.0414 - acc: 0.9875 - val_loss: 0.0313 - val_acc: 0.9892\n",
+      "Test loss: 0.0313187897586\n",
+      "Test accuracy: 0.9892\n"
      ]
     }
    ],
@@ -546,7 +557,46 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Start with a simple sequential model\n",
+    "model = Sequential()\n",
+    "\n",
+    "# Add dense layers to create a fully connected MLP\n",
+    "# Note that we specify an input shape for the first layer, but only the first layer.\n",
+    "# Relu is the activation function used\n",
+    "model.add(Dense(64, activation='relu', input_shape=(784,)))\n",
+    "# Dropout layers remove features and fight overfitting\n",
+    "model.add(Dropout(0.1))\n",
+    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dropout(0.1))\n",
+    "# End with a number of units equal to the number of classes we have for our outcome\n",
+    "model.add(Dense(10, activation='softmax'))\n",
+    "\n",
+    "model.summary()\n",
+    "\n",
+    "# Compile the model to put it all together.\n",
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer=RMSprop(),\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "history = model.fit(x_train, y_train,\n",
+    "                    batch_size=128,\n",
+    "                    epochs=10,\n",
+    "                    verbose=1,\n",
+    "                    validation_data=(x_test, y_test))\n",
+    "score = model.evaluate(x_test, y_test, verbose=0)\n",
+    "print('Test loss:', score[0])\n",
+    "print('Test accuracy:', score[1])"
+   ]
   }
  ],
  "metadata": {
@@ -566,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
