--- a/6.6.5 Keras for a Neural Net.ipynb
+++ b/6.6.5 Keras for a Neural Net.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -63,25 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
-      "11247616/11490434 [============================>.] - ETA: 0s"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +128,7 @@
        "        [0, 0, 0, ..., 0, 0, 0]]], dtype=uint8)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,27 +279,27 @@
      "text": [
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.4379 - acc: 0.8721 - val_loss: 0.1884 - val_acc: 0.9428\n",
+      "60000/60000 [==============================] - 1s - loss: 0.4332 - acc: 0.8756 - val_loss: 0.1975 - val_acc: 0.9397\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.2045 - acc: 0.9391 - val_loss: 0.1405 - val_acc: 0.9569\n",
+      "60000/60000 [==============================] - 1s - loss: 0.2024 - acc: 0.9400 - val_loss: 0.1342 - val_acc: 0.9581\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1607 - acc: 0.9520 - val_loss: 0.1147 - val_acc: 0.9643\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1582 - acc: 0.9523 - val_loss: 0.1170 - val_acc: 0.9644\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1355 - acc: 0.9589 - val_loss: 0.1077 - val_acc: 0.9693\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1307 - acc: 0.9608 - val_loss: 0.1018 - val_acc: 0.9686\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1203 - acc: 0.9634 - val_loss: 0.1047 - val_acc: 0.9693\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1168 - acc: 0.9645 - val_loss: 0.0983 - val_acc: 0.9715\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1071 - acc: 0.9677 - val_loss: 0.0987 - val_acc: 0.9715\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1041 - acc: 0.9685 - val_loss: 0.0906 - val_acc: 0.9727\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0988 - acc: 0.9704 - val_loss: 0.0956 - val_acc: 0.9735\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0947 - acc: 0.9710 - val_loss: 0.0909 - val_acc: 0.9723\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0900 - acc: 0.9723 - val_loss: 0.0963 - val_acc: 0.9730\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0873 - acc: 0.9738 - val_loss: 0.0876 - val_acc: 0.9749\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0848 - acc: 0.9740 - val_loss: 0.0894 - val_acc: 0.9763\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0837 - acc: 0.9746 - val_loss: 0.0835 - val_acc: 0.9760\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0811 - acc: 0.9749 - val_loss: 0.0784 - val_acc: 0.9792\n",
-      "Test loss: 0.0783890736205\n",
-      "Test accuracy: 0.9792\n"
+      "60000/60000 [==============================] - 1s - loss: 0.0762 - acc: 0.9768 - val_loss: 0.0898 - val_acc: 0.9753\n",
+      "Test loss: 0.0898385454678\n",
+      "Test accuracy: 0.9753\n"
      ]
     }
    ],
@@ -552,11 +543,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_25 (Dense)             (None, 64)                50240     \n",
+      "_________________________________________________________________\n",
+      "dropout_17 (Dropout)         (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_26 (Dense)             (None, 64)                4160      \n",
+      "_________________________________________________________________\n",
+      "dropout_18 (Dropout)         (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_27 (Dense)             (None, 10)                650       \n",
+      "=================================================================\n",
+      "Total params: 55,050\n",
+      "Trainable params: 55,050\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# Start with a simple sequential model\n",
     "model = Sequential()\n",
@@ -564,7 +577,7 @@
     "# Add dense layers to create a fully connected MLP\n",
     "# Note that we specify an input shape for the first layer, but only the first layer.\n",
     "# Relu is the activation function used\n",
-    "model.add(Dense(64, activation='relu', input_shape=(784,)))\n",
+    "model.add(Dense(64, activation='linear', input_shape=(784,)))\n",
     "# Dropout layers remove features and fight overfitting\n",
     "model.add(Dropout(0.1))\n",
     "model.add(Dense(64, activation='relu'))\n",
@@ -582,11 +595,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 60000 samples, validate on 10000 samples\n",
+      "Epoch 1/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.4110 - acc: 0.8801 - val_loss: 0.2131 - val_acc: 0.9379\n",
+      "Epoch 2/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.2335 - acc: 0.9316 - val_loss: 0.1664 - val_acc: 0.9504\n",
+      "Epoch 3/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1943 - acc: 0.9428 - val_loss: 0.1554 - val_acc: 0.9534\n",
+      "Epoch 4/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1753 - acc: 0.9474 - val_loss: 0.1445 - val_acc: 0.9581\n",
+      "Epoch 5/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1569 - acc: 0.9525 - val_loss: 0.1274 - val_acc: 0.9629\n",
+      "Epoch 6/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1476 - acc: 0.9553 - val_loss: 0.1225 - val_acc: 0.9633\n",
+      "Epoch 7/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1381 - acc: 0.9577 - val_loss: 0.1169 - val_acc: 0.9664\n",
+      "Epoch 8/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1289 - acc: 0.9601 - val_loss: 0.1117 - val_acc: 0.9670\n",
+      "Epoch 9/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1254 - acc: 0.9613 - val_loss: 0.1113 - val_acc: 0.9674\n",
+      "Epoch 10/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1187 - acc: 0.9640 - val_loss: 0.1117 - val_acc: 0.9696\n",
+      "Test loss: 0.111678240961\n",
+      "Test accuracy: 0.9696\n"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit(x_train, y_train,\n",
     "                    batch_size=128,\n",
@@ -596,6 +637,228 @@
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print('Test loss:', score[0])\n",
     "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results of Exploratory Analysis:\n",
+    "\n",
+    "activation = relu / elu / softmax - Test loss: 0.0870043254456 Test accuracy: 0.9753\n",
+    "activation = relu / selu / softmax - Test loss: 0.0847957983427 Test accuracy: 0.9771\n",
+    "activation = selu / selu / softmax - Test loss: 0.0937839540551 Test accuracy: 0.9726\n",
+    "activation = tanh / relu / softmax - Test loss: 0.0891504549881 Test accuracy: 0.9725\n",
+    "activation = sigmoid / relu / softmax - Test loss: 0.0988173509547 Test accuracy: 0.9696\n",
+    "activation = hard_sigmoid / relu / softmax - Test loss: 0.100846571798 Test accuracy: 0.9695\n",
+    "activation = linear / relu / softmax - Test loss: 0.111678240961 Test accuracy: 0.9696"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_47 (Dense)             (None, 120)               94200     \n",
+      "_________________________________________________________________\n",
+      "dropout_31 (Dropout)         (None, 120)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_48 (Dense)             (None, 120)               14520     \n",
+      "_________________________________________________________________\n",
+      "dropout_32 (Dropout)         (None, 120)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_49 (Dense)             (None, 10)                1210      \n",
+      "=================================================================\n",
+      "Total params: 109,930\n",
+      "Trainable params: 109,930\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Start with a simple sequential model\n",
+    "model = Sequential()\n",
+    "\n",
+    "# Add dense layers to create a fully connected MLP\n",
+    "# Note that we specify an input shape for the first layer, but only the first layer.\n",
+    "# Relu is the activation function used\n",
+    "model.add(Dense(120, activation='relu', input_shape=(784,)))\n",
+    "# Dropout layers remove features and fight overfitting\n",
+    "model.add(Dropout(0.1))\n",
+    "model.add(Dense(120, activation='relu'))\n",
+    "model.add(Dropout(0.1))\n",
+    "# End with a number of units equal to the number of classes we have for our outcome\n",
+    "model.add(Dense(10, activation='softmax'))\n",
+    "\n",
+    "model.summary()\n",
+    "\n",
+    "# Compile the model to put it all together.\n",
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer=RMSprop(),\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 60000 samples, validate on 10000 samples\n",
+      "Epoch 1/10\n",
+      "60000/60000 [==============================] - 2s - loss: 0.0074 - acc: 0.9978 - val_loss: 0.1238 - val_acc: 0.9804\n",
+      "Epoch 2/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0080 - acc: 0.9977 - val_loss: 0.1270 - val_acc: 0.9805\n",
+      "Epoch 3/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0085 - acc: 0.9978 - val_loss: 0.1361 - val_acc: 0.9795\n",
+      "Epoch 4/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0080 - acc: 0.9977 - val_loss: 0.1330 - val_acc: 0.9801\n",
+      "Epoch 5/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0071 - acc: 0.9978 - val_loss: 0.1237 - val_acc: 0.9818\n",
+      "Epoch 6/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0087 - acc: 0.9977 - val_loss: 0.1176 - val_acc: 0.9812\n",
+      "Epoch 7/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0085 - acc: 0.9977 - val_loss: 0.1223 - val_acc: 0.9817\n",
+      "Epoch 8/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0077 - acc: 0.9978 - val_loss: 0.1318 - val_acc: 0.9798\n",
+      "Epoch 9/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0080 - acc: 0.9977 - val_loss: 0.1227 - val_acc: 0.9816\n",
+      "Epoch 10/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0088 - acc: 0.9976 - val_loss: 0.1207 - val_acc: 0.9815\n",
+      "Test loss: 0.120744370728\n",
+      "Test accuracy: 0.9815\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(x_train, y_train,\n",
+    "                    batch_size=256,\n",
+    "                    epochs=10,\n",
+    "                    verbose=1,\n",
+    "                    validation_data=(x_test, y_test))\n",
+    "score = model.evaluate(x_test, y_test, verbose=0)\n",
+    "print('Test loss:', score[0])\n",
+    "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_50 (Dense)             (None, 120)               94200     \n",
+      "_________________________________________________________________\n",
+      "dropout_33 (Dropout)         (None, 120)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_51 (Dense)             (None, 120)               14520     \n",
+      "_________________________________________________________________\n",
+      "dropout_34 (Dropout)         (None, 120)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_52 (Dense)             (None, 10)                1210      \n",
+      "=================================================================\n",
+      "Total params: 109,930\n",
+      "Trainable params: 109,930\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "#activation = relu / selu / softmax \n",
+    "\n",
+    "model = Sequential()\n",
+    "\n",
+    "model.add(Dense(120, activation='relu', input_shape=(784,)))\n",
+    "# Dropout layers remove features and fight overfitting\n",
+    "model.add(Dropout(0.1))\n",
+    "model.add(Dense(120, activation='selu'))\n",
+    "model.add(Dropout(0.1))\n",
+    "# End with a number of units equal to the number of classes we have for our outcome\n",
+    "model.add(Dense(10, activation='softmax'))\n",
+    "\n",
+    "model.summary()\n",
+    "\n",
+    "# Compile the model to put it all together.\n",
+    "model.compile(loss='categorical_crossentropy',\n",
+    "              optimizer=RMSprop(),\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 60000 samples, validate on 10000 samples\n",
+      "Epoch 1/10\n",
+      "60000/60000 [==============================] - 2s - loss: 0.3700 - acc: 0.8907 - val_loss: 0.1676 - val_acc: 0.9478\n",
+      "Epoch 2/10\n",
+      "60000/60000 [==============================] - 2s - loss: 0.1584 - acc: 0.9528 - val_loss: 0.1207 - val_acc: 0.9628\n",
+      "Epoch 3/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.1136 - acc: 0.9648 - val_loss: 0.0993 - val_acc: 0.9699\n",
+      "Epoch 4/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0896 - acc: 0.9725 - val_loss: 0.0877 - val_acc: 0.9734\n",
+      "Epoch 5/10\n",
+      "60000/60000 [==============================] - 2s - loss: 0.0753 - acc: 0.9766 - val_loss: 0.0865 - val_acc: 0.9743\n",
+      "Epoch 6/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0640 - acc: 0.9800 - val_loss: 0.0801 - val_acc: 0.9764\n",
+      "Epoch 7/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0571 - acc: 0.9816 - val_loss: 0.0836 - val_acc: 0.9781\n",
+      "Epoch 8/10\n",
+      "60000/60000 [==============================] - 2s - loss: 0.0492 - acc: 0.9843 - val_loss: 0.0814 - val_acc: 0.9757\n",
+      "Epoch 9/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0446 - acc: 0.9858 - val_loss: 0.0773 - val_acc: 0.9788\n",
+      "Epoch 10/10\n",
+      "60000/60000 [==============================] - 1s - loss: 0.0399 - acc: 0.9869 - val_loss: 0.0799 - val_acc: 0.9787\n",
+      "Test loss: 0.0798542194472\n",
+      "Test accuracy: 0.9787\n"
+     ]
+    }
+   ],
+   "source": [
+    "history = model.fit(x_train, y_train,\n",
+    "                    batch_size=256,\n",
+    "                    epochs=10,\n",
+    "                    verbose=1,\n",
+    "                    validation_data=(x_test, y_test))\n",
+    "score = model.evaluate(x_test, y_test, verbose=0)\n",
+    "print('Test loss:', score[0])\n",
+    "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final Results:\n",
+    "\n",
+    "The best results (98.15% accuracy) came from using the original MLP activation layers and parameters with a batch_size of 256."
    ]
   }
  ],
