--- a/6.6.6 Challenge Revised.ipynb
+++ b/6.6.6 Challenge Revised.ipynb
@@ -179,27 +179,27 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "50000/50000 [==============================] - 2s - loss: 2.0402 - acc: 0.2513     \n",
+      "50000/50000 [==============================] - 2s - loss: 2.0338 - acc: 0.2473     \n",
       "Epoch 2/10\n",
-      "50000/50000 [==============================] - 2s - loss: 1.8725 - acc: 0.3212     \n",
+      "50000/50000 [==============================] - 2s - loss: 1.9197 - acc: 0.2948     \n",
       "Epoch 3/10\n",
-      "50000/50000 [==============================] - 2s - loss: 1.8243 - acc: 0.3406     \n",
+      "50000/50000 [==============================] - 2s - loss: 1.8852 - acc: 0.3110     \n",
       "Epoch 4/10\n",
-      "50000/50000 [==============================] - 2s - loss: 1.7958 - acc: 0.3530     \n",
+      "50000/50000 [==============================] - 2s - loss: 1.8664 - acc: 0.3203     \n",
       "Epoch 5/10\n",
-      "50000/50000 [==============================] - 2s - loss: 1.7762 - acc: 0.3626     \n",
+      "50000/50000 [==============================] - 2s - loss: 1.8526 - acc: 0.3264     \n",
       "Epoch 6/10\n",
-      "50000/50000 [==============================] - 2s - loss: 1.7504 - acc: 0.3732     \n",
+      "50000/50000 [==============================] - 2s - loss: 1.8422 - acc: 0.3305     \n",
       "Epoch 7/10\n",
-      "50000/50000 [==============================] - 2s - loss: 1.7432 - acc: 0.3768     \n",
+      "50000/50000 [==============================] - 2s - loss: 1.8250 - acc: 0.3396     \n",
       "Epoch 8/10\n",
-      "50000/50000 [==============================] - 2s - loss: 1.7279 - acc: 0.3808     \n",
+      "50000/50000 [==============================] - 2s - loss: 1.8078 - acc: 0.3456     \n",
       "Epoch 9/10\n",
-      "50000/50000 [==============================] - 2s - loss: 1.7174 - acc: 0.3834     \n",
+      "50000/50000 [==============================] - 2s - loss: 1.7981 - acc: 0.3473     \n",
       "Epoch 10/10\n",
-      "50000/50000 [==============================] - 2s - loss: 1.7037 - acc: 0.3903     \n",
-      "Test Loss:  1.64746200027\n",
-      "Test Accuracy:  0.4053\n"
+      "50000/50000 [==============================] - 2s - loss: 1.7909 - acc: 0.3531     \n",
+      "Test Loss:  1.72420504169\n",
+      "Test Accuracy:  0.3626\n"
      ]
     }
    ],
@@ -215,28 +215,52 @@
    "metadata": {},
    "source": [
     "#### Analysis of Implementation 1:\n",
-    "   Our model did not perform well. It took around twenty seconds and only had an accuracy of 34.96%"
+    "   Our model did not perform well. It took around twenty seconds and only had an accuracy of 36.26%"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implementation 2: Multi Layer Perceptron"
+    "### Implementation 2: Multi Layer Perceptron\n",
+    "\n",
+    "Changing optimizer to Adadelta based on results from http://cs231n.github.io/neural-networks-3/. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_7 (Dense)              (None, 64)                196672    \n",
+      "_________________________________________________________________\n",
+      "dropout_5 (Dropout)          (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_8 (Dense)              (None, 64)                4160      \n",
+      "_________________________________________________________________\n",
+      "dropout_6 (Dropout)          (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_9 (Dense)              (None, 10)                650       \n",
+      "=================================================================\n",
+      "Total params: 201,482\n",
+      "Trainable params: 201,482\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# Modifying the original MLP\n",
     "model = Sequential()\n",
     "\n",
-    "model.add(Dense(64, activation='relu', input_shape=(784,)))\n",
+    "model.add(Dense(64, activation='relu', input_shape=(3072,)))\n",
     "# Dropout layers remove features and fight overfitting\n",
     "model.add(Dropout(0.1))\n",
     "model.add(Dense(64, activation='relu'))\n",
@@ -248,17 +272,44 @@
     "\n",
     "# Compile the model to put it all together.\n",
     "model.compile(loss='categorical_crossentropy',\n",
-    "              optimizer=RMSprop(),\n",
+    "              optimizer=keras.optimizers.Adadelta(),\n",
     "              metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.9952 - acc: 0.2706     \n",
+      "Epoch 2/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.8309 - acc: 0.3372     \n",
+      "Epoch 3/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.7690 - acc: 0.3643     \n",
+      "Epoch 4/10\n",
+      "50000/50000 [==============================] - 2s - loss: 1.7309 - acc: 0.3811     \n",
+      "Epoch 5/10\n",
+      "50000/50000 [==============================] - 2s - loss: 1.7013 - acc: 0.3908     \n",
+      "Epoch 6/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.6734 - acc: 0.4033     \n",
+      "Epoch 7/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.6521 - acc: 0.4087     \n",
+      "Epoch 8/10\n",
+      "50000/50000 [==============================] - 2s - loss: 1.6340 - acc: 0.4167     \n",
+      "Epoch 9/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.6140 - acc: 0.4262     \n",
+      "Epoch 10/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.5985 - acc: 0.4323     \n",
+      "Test Loss:  1.62469896145\n",
+      "Test Accuracy:  0.4186\n"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit(x_train, y_train, batch_size = 64, epochs=10)\n",
     "score = model.evaluate(x_test, y_test, verbose=False)\n",
@@ -270,31 +321,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Analysis of Implementation 2:"
+    "#### Analysis of Implementation 2:\n",
+    "Using the adadelta optimizer improved the accuracy to 41.86%"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implementation 3: Multi Layer Perceptron"
+    "### Implementation 3: Multi Layer Perceptron\n",
+    "Using Adadelta optimizer and leaky relu activation. Leaky ReLU is explained here  https://stats.stackexchange.com/questions/115258/comprehensive-list-of-activation-functions-in-neural-networks-with-pros-cons."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_13 (Dense)             (None, 64)                196672    \n",
+      "_________________________________________________________________\n",
+      "dropout_9 (Dropout)          (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_14 (Dense)             (None, 64)                4160      \n",
+      "_________________________________________________________________\n",
+      "dropout_10 (Dropout)         (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_15 (Dense)             (None, 10)                650       \n",
+      "=================================================================\n",
+      "Total params: 201,482\n",
+      "Trainable params: 201,482\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\maken\\Anaconda3\\lib\\site-packages\\keras\\activations.py:103: UserWarning: Do not pass a layer instance (such as LeakyReLU) as the activation argument of another layer. Instead, advanced activation layers should be used just like any other layer in a model.\n",
+      "  ).format(identifier=identifier.__class__.__name__))\n"
+     ]
+    }
+   ],
    "source": [
     "# Modifying the original MLP\n",
     "model = Sequential()\n",
     "\n",
-    "model.add(Dense(64, activation='relu', input_shape=(784,)))\n",
+    "model.add(Dense(64, activation=keras.layers.LeakyReLU(), input_shape=(3072,)))\n",
     "# Dropout layers remove features and fight overfitting\n",
     "model.add(Dropout(0.1))\n",
-    "model.add(Dense(64, activation='relu'))\n",
+    "model.add(Dense(64, activation=keras.layers.LeakyReLU()))\n",
     "model.add(Dropout(0.1))\n",
     "# Output shape should be equal to the number of classes (10)\n",
     "model.add(Dense(10, activation='softmax'))\n",
@@ -303,17 +386,44 @@
     "\n",
     "# Compile the model to put it all together.\n",
     "model.compile(loss='categorical_crossentropy',\n",
-    "              optimizer=RMSprop(),\n",
+    "              optimizer=keras.optimizers.Adadelta(),\n",
     "              metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.9634 - acc: 0.2890     \n",
+      "Epoch 2/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.8186 - acc: 0.3501     \n",
+      "Epoch 3/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.7571 - acc: 0.3746     \n",
+      "Epoch 4/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.7144 - acc: 0.3935     \n",
+      "Epoch 5/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.6808 - acc: 0.4066     \n",
+      "Epoch 6/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.6567 - acc: 0.4130     \n",
+      "Epoch 7/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.6325 - acc: 0.4206     \n",
+      "Epoch 8/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.6181 - acc: 0.4292     \n",
+      "Epoch 9/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.5992 - acc: 0.4362     \n",
+      "Epoch 10/10\n",
+      "50000/50000 [==============================] - 3s - loss: 1.5815 - acc: 0.4397     \n",
+      "Test Loss:  1.54988387165\n",
+      "Test Accuracy:  0.4508\n"
+     ]
+    }
+   ],
    "source": [
     "history = model.fit(x_train, y_train, batch_size = 64, epochs=10)\n",
     "score = model.evaluate(x_test, y_test, verbose=False)\n",
@@ -325,7 +435,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Analysis of Implementation 3:"
+    "#### Analysis of Implementation 3:\n",
+    "Using adadelta optimizer and leaky ReLU activations increased the accuray to 45.08%."
    ]
   },
   {
@@ -433,7 +544,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Analysis of Convolutional Neural Network"
+    "#### Analysis of Convolutional Neural Network\n",
+    "Implementing a CNN improved accuracy to 68.7%."
    ]
   },
   {
@@ -530,24 +642,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Analysis of Implementation 5:"
+    "#### Analysis of Implementation 5:\n",
+    "The Hierarchical Recurrent Neural Network implementation took about five minutes per epoch and resulted in an accuracy of 36.76%."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Final Results:"
+    "### Final Results:\n",
+    "\n",
+    "Original Multi-Layer Perceptron: 2 seconds/epoch, 36.26% accuracy.\n",
+    "\n",
+    "MLP Implementation 2: 2-3 seconds/epoch, 31.86% accuracy.\n",
+    "\n",
+    "MLP Implementation 3: 2-3 seconds/epoch, 45.08% accuracy.\n",
+    "\n",
+    "CNN Implementation: 130 seconds/epoch, 68.7% accuracy.\n",
+    "\n",
+    "RNN Implementation: 295 seconds/epoch, 36.76% accuracy.\n",
+    "\n",
+    "#### Conclusion:\n",
+    "\n",
+    "The CNN Implementation returned the best accuracy with a large increase in computational time."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
