--- a/6.6.6 Challenge Revised.ipynb
+++ b/6.6.6 Challenge Revised.ipynb
@@ -664,7 +664,7 @@
     "\n",
     "#### Conclusion:\n",
     "\n",
-    "The CNN Implementation returned the best accuracy with a large increase in computational time."
+    "The CNN Implementation returned the best accuracy with a large increase in computational time. The results were compared against a baseline of randomly choosing the category (10%). "
    ]
   }
  ],
